docs/envoy/v1.18.2/_sources/api-v3/data/accesslog/v3/accesslog.proto.rst.txt
.. _envoy_v3_api_file_envoy/data/accesslog/v3/accesslog.proto:

gRPC access logs
================

Envoy access logs describe incoming interaction with Envoy over a fixed
period of time, and typically cover a single request/response exchange,
(e.g. HTTP), stream (e.g. over HTTP/gRPC), or proxied connection (e.g. TCP).
Access logs contain fields defined in protocol-specific protobuf messages.

Except where explicitly declared otherwise, all fields describe
*downstream* interaction between Envoy and a connected client.
Fields describing *upstream* interaction will explicitly include ``upstream``
in their name.

.. _envoy_v3_api_msg_data.accesslog.v3.TCPAccessLogEntry:

data.accesslog.v3.TCPAccessLogEntry
-----------------------------------

`[data.accesslog.v3.TCPAccessLogEntry proto] <https://github.com/envoyproxy/envoy/blob/v1.18.2/api/envoy/data/accesslog/v3/accesslog.proto#L32>`_


.. code-block:: json

  {
    "common_properties": "{...}",
    "connection_properties": "{...}"
  }

.. _envoy_v3_api_field_data.accesslog.v3.TCPAccessLogEntry.common_properties:

common_properties
  (:ref:`data.accesslog.v3.AccessLogCommon <envoy_v3_api_msg_data.accesslog.v3.AccessLogCommon>`) Common properties shared by all Envoy access logs.
  
  
.. _envoy_v3_api_field_data.accesslog.v3.TCPAccessLogEntry.connection_properties:

connection_properties
  (:ref:`data.accesslog.v3.ConnectionProperties <envoy_v3_api_msg_data.accesslog.v3.ConnectionProperties>`) Properties of the TCP connection.
  
  


.. _envoy_v3_api_msg_data.accesslog.v3.HTTPAccessLogEntry:

data.accesslog.v3.HTTPAccessLogEntry
------------------------------------

`[data.accesslog.v3.HTTPAccessLogEntry proto] <https://github.com/envoyproxy/envoy/blob/v1.18.2/api/envoy/data/accesslog/v3/accesslog.proto#L43>`_


.. code-block:: json

  {
    "common_properties": "{...}",
    "protocol_version": "...",
    "request": "{...}",
    "response": "{...}"
  }

.. _envoy_v3_api_field_data.accesslog.v3.HTTPAccessLogEntry.common_properties:

common_properties
  (:ref:`data.accesslog.v3.AccessLogCommon <envoy_v3_api_msg_data.accesslog.v3.AccessLogCommon>`) Common properties shared by all Envoy access logs.
  
  
.. _envoy_v3_api_field_data.accesslog.v3.HTTPAccessLogEntry.protocol_version:

protocol_version
  (:ref:`data.accesslog.v3.HTTPAccessLogEntry.HTTPVersion <envoy_v3_api_enum_data.accesslog.v3.HTTPAccessLogEntry.HTTPVersion>`) 
  
.. _envoy_v3_api_field_data.accesslog.v3.HTTPAccessLogEntry.request:

request
  (:ref:`data.accesslog.v3.HTTPRequestProperties <envoy_v3_api_msg_data.accesslog.v3.HTTPRequestProperties>`) Description of the incoming HTTP request.
  
  
.. _envoy_v3_api_field_data.accesslog.v3.HTTPAccessLogEntry.response:

response
  (:ref:`data.accesslog.v3.HTTPResponseProperties <envoy_v3_api_msg_data.accesslog.v3.HTTPResponseProperties>`) Description of the outgoing HTTP response.
  
  

.. _envoy_v3_api_enum_data.accesslog.v3.HTTPAccessLogEntry.HTTPVersion:

Enum data.accesslog.v3.HTTPAccessLogEntry.HTTPVersion
-----------------------------------------------------

`[data.accesslog.v3.HTTPAccessLogEntry.HTTPVersion proto] <https://github.com/envoyproxy/envoy/blob/v1.18.2/api/envoy/data/accesslog/v3/accesslog.proto#L48>`_

HTTP version

.. _envoy_v3_api_enum_value_data.accesslog.v3.HTTPAccessLogEntry.HTTPVersion.PROTOCOL_UNSPECIFIED:

PROTOCOL_UNSPECIFIED
  *(DEFAULT)* ⁣
  
.. _envoy_v3_api_enum_value_data.accesslog.v3.HTTPAccessLogEntry.HTTPVersion.HTTP10:

HTTP10
  ⁣
  
.. _envoy_v3_api_enum_value_data.accesslog.v3.HTTPAccessLogEntry.HTTPVersion.HTTP11:

HTTP11
  ⁣
  
.. _envoy_v3_api_enum_value_data.accesslog.v3.HTTPAccessLogEntry.HTTPVersion.HTTP2:

HTTP2
  ⁣
  
.. _envoy_v3_api_enum_value_data.accesslog.v3.HTTPAccessLogEntry.HTTPVersion.HTTP3:

HTTP3
  ⁣
  

.. _envoy_v3_api_msg_data.accesslog.v3.ConnectionProperties:

data.accesslog.v3.ConnectionProperties
--------------------------------------

`[data.accesslog.v3.ConnectionProperties proto] <https://github.com/envoyproxy/envoy/blob/v1.18.2/api/envoy/data/accesslog/v3/accesslog.proto#L69>`_

Defines fields for a connection

.. code-block:: json

  {
    "received_bytes": "...",
    "sent_bytes": "..."
  }

.. _envoy_v3_api_field_data.accesslog.v3.ConnectionProperties.received_bytes:

received_bytes
  (`uint64 <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Number of bytes received from downstream.
  
  
.. _envoy_v3_api_field_data.accesslog.v3.ConnectionProperties.sent_bytes:

sent_bytes
  (`uint64 <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Number of bytes sent to downstream.
  
  


.. _envoy_v3_api_msg_data.accesslog.v3.AccessLogCommon:

data.accesslog.v3.AccessLogCommon
---------------------------------

`[data.accesslog.v3.AccessLogCommon proto] <https://github.com/envoyproxy/envoy/blob/v1.18.2/api/envoy/data/accesslog/v3/accesslog.proto#L82>`_

Defines fields that are shared by all Envoy access logs.

.. code-block:: json

  {
    "downstream_remote_address": "{...}",
    "downstream_local_address": "{...}",
    "tls_properties": "{...}",
    "start_time": "{...}",
    "time_to_last_rx_byte": "{...}",
    "time_to_first_upstream_tx_byte": "{...}",
    "time_to_last_upstream_tx_byte": "{...}",
    "time_to_first_upstream_rx_byte": "{...}",
    "time_to_last_upstream_rx_byte": "{...}",
    "time_to_first_downstream_tx_byte": "{...}",
    "time_to_last_downstream_tx_byte": "{...}",
    "upstream_remote_address": "{...}",
    "upstream_local_address": "{...}",
    "upstream_cluster": "...",
    "response_flags": "{...}",
    "metadata": "{...}",
    "upstream_transport_failure_reason": "...",
    "route_name": "...",
    "downstream_direct_remote_address": "{...}",
    "filter_state_objects": "{...}"
  }


.. _envoy_v3_api_field_data.accesslog.v3.AccessLogCommon.downstream_remote_address:

downstream_remote_address
  (:ref:`config.core.v3.Address <envoy_v3_api_msg_config.core.v3.Address>`) This field is the remote/origin address on which the request from the user was received.
  Note: This may not be the physical peer. E.g, if the remote address is inferred from for
  example the x-forwarder-for header, proxy protocol, etc.
  
  
.. _envoy_v3_api_field_data.accesslog.v3.AccessLogCommon.downstream_local_address:

downstream_local_address
  (:ref:`config.core.v3.Address <envoy_v3_api_msg_config.core.v3.Address>`) This field is the local/destination address on which the request from the user was received.
  
  
.. _envoy_v3_api_field_data.accesslog.v3.AccessLogCommon.tls_properties:

tls_properties
  (:ref:`data.accesslog.v3.TLSProperties <envoy_v3_api_msg_data.accesslog.v3.TLSProperties>`) If the connection is secure,S this field will contain TLS properties.
  
  
.. _envoy_v3_api_field_data.accesslog.v3.AccessLogCommon.start_time:

start_time
  (`Timestamp <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#timestamp>`_) The time that Envoy started servicing this request. This is effectively the time that the first
  downstream byte is received.
  
  
.. _envoy_v3_api_field_data.accesslog.v3.AccessLogCommon.time_to_last_rx_byte:

time_to_last_rx_byte
  (`Duration <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#duration>`_) Interval between the first downstream byte received and the last
  downstream byte received (i.e. time it takes to receive a request).
  
  
.. _envoy_v3_api_field_data.accesslog.v3.AccessLogCommon.time_to_first_upstream_tx_byte:

time_to_first_upstream_tx_byte
  (`Duration <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#duration>`_) Interval between the first downstream byte received and the first upstream byte sent. There may
  by considerable delta between *time_to_last_rx_byte* and this value due to filters.
  Additionally, the same caveats apply as documented in *time_to_last_downstream_tx_byte* about
  not accounting for kernel socket buffer time, etc.
  
  
.. _envoy_v3_api_field_data.accesslog.v3.AccessLogCommon.time_to_last_upstream_tx_byte:

time_to_last_upstream_tx_byte
  (`Duration <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#duration>`_) Interval between the first downstream byte received and the last upstream byte sent. There may
  by considerable delta between *time_to_last_rx_byte* and this value due to filters.
  Additionally, the same caveats apply as documented in *time_to_last_downstream_tx_byte* about
  not accounting for kernel socket buffer time, etc.
  
  
.. _envoy_v3_api_field_data.accesslog.v3.AccessLogCommon.time_to_first_upstream_rx_byte:

time_to_first_upstream_rx_byte
  (`Duration <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#duration>`_) Interval between the first downstream byte received and the first upstream
  byte received (i.e. time it takes to start receiving a response).
  
  
.. _envoy_v3_api_field_data.accesslog.v3.AccessLogCommon.time_to_last_upstream_rx_byte:

time_to_last_upstream_rx_byte
  (`Duration <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#duration>`_) Interval between the first downstream byte received and the last upstream
  byte received (i.e. time it takes to receive a complete response).
  
  
.. _envoy_v3_api_field_data.accesslog.v3.AccessLogCommon.time_to_first_downstream_tx_byte:

time_to_first_downstream_tx_byte
  (`Duration <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#duration>`_) Interval between the first downstream byte received and the first downstream byte sent.
  There may be a considerable delta between the *time_to_first_upstream_rx_byte* and this field
  due to filters. Additionally, the same caveats apply as documented in
  *time_to_last_downstream_tx_byte* about not accounting for kernel socket buffer time, etc.
  
  
.. _envoy_v3_api_field_data.accesslog.v3.AccessLogCommon.time_to_last_downstream_tx_byte:

time_to_last_downstream_tx_byte
  (`Duration <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#duration>`_) Interval between the first downstream byte received and the last downstream byte sent.
  Depending on protocol, buffering, windowing, filters, etc. there may be a considerable delta
  between *time_to_last_upstream_rx_byte* and this field. Note also that this is an approximate
  time. In the current implementation it does not include kernel socket buffer time. In the
  current implementation it also does not include send window buffering inside the HTTP/2 codec.
  In the future it is likely that work will be done to make this duration more accurate.
  
  
.. _envoy_v3_api_field_data.accesslog.v3.AccessLogCommon.upstream_remote_address:

upstream_remote_address
  (:ref:`config.core.v3.Address <envoy_v3_api_msg_config.core.v3.Address>`) The upstream remote/destination address that handles this exchange. This does not include
  retries.
  
  
.. _envoy_v3_api_field_data.accesslog.v3.AccessLogCommon.upstream_local_address:

upstream_local_address
  (:ref:`config.core.v3.Address <envoy_v3_api_msg_config.core.v3.Address>`) The upstream local/origin address that handles this exchange. This does not include retries.
  
  
.. _envoy_v3_api_field_data.accesslog.v3.AccessLogCommon.upstream_cluster:

upstream_cluster
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) The upstream cluster that *upstream_remote_address* belongs to.
  
  
.. _envoy_v3_api_field_data.accesslog.v3.AccessLogCommon.response_flags:

response_flags
  (:ref:`data.accesslog.v3.ResponseFlags <envoy_v3_api_msg_data.accesslog.v3.ResponseFlags>`) Flags indicating occurrences during request/response processing.
  
  
.. _envoy_v3_api_field_data.accesslog.v3.AccessLogCommon.metadata:

metadata
  (:ref:`config.core.v3.Metadata <envoy_v3_api_msg_config.core.v3.Metadata>`) All metadata encountered during request processing, including endpoint
  selection.
  
  This can be used to associate IDs attached to the various configurations
  used to process this request with the access log entry. For example, a
  route created from a higher level forwarding rule with some ID can place
  that ID in this field and cross reference later. It can also be used to
  determine if a canary endpoint was used or not.
  
  
.. _envoy_v3_api_field_data.accesslog.v3.AccessLogCommon.upstream_transport_failure_reason:

upstream_transport_failure_reason
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) If upstream connection failed due to transport socket (e.g. TLS handshake), provides the
  failure reason from the transport socket. The format of this field depends on the configured
  upstream transport socket. Common TLS failures are in
  :ref:`TLS trouble shooting <arch_overview_ssl_trouble_shooting>`.
  
  
.. _envoy_v3_api_field_data.accesslog.v3.AccessLogCommon.route_name:

route_name
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) The name of the route
  
  
.. _envoy_v3_api_field_data.accesslog.v3.AccessLogCommon.downstream_direct_remote_address:

downstream_direct_remote_address
  (:ref:`config.core.v3.Address <envoy_v3_api_msg_config.core.v3.Address>`) This field is the downstream direct remote address on which the request from the user was
  received. Note: This is always the physical peer, even if the remote address is inferred from
  for example the x-forwarder-for header, proxy protocol, etc.
  
  
.. _envoy_v3_api_field_data.accesslog.v3.AccessLogCommon.filter_state_objects:

filter_state_objects
  (**repeated** map<`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_, `Any <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#any>`_>) Map of filter state in stream info that have been configured to be logged. If the filter
  state serialized to any message other than `google.protobuf.Any` it will be packed into
  `google.protobuf.Any`.
  
  


.. _envoy_v3_api_msg_data.accesslog.v3.ResponseFlags:

data.accesslog.v3.ResponseFlags
-------------------------------

`[data.accesslog.v3.ResponseFlags proto] <https://github.com/envoyproxy/envoy/blob/v1.18.2/api/envoy/data/accesslog/v3/accesslog.proto#L189>`_

Flags indicating occurrences during request/response processing.

.. code-block:: json

  {
    "failed_local_healthcheck": "...",
    "no_healthy_upstream": "...",
    "upstream_request_timeout": "...",
    "local_reset": "...",
    "upstream_remote_reset": "...",
    "upstream_connection_failure": "...",
    "upstream_connection_termination": "...",
    "upstream_overflow": "...",
    "no_route_found": "...",
    "delay_injected": "...",
    "fault_injected": "...",
    "rate_limited": "...",
    "unauthorized_details": "{...}",
    "rate_limit_service_error": "...",
    "downstream_connection_termination": "...",
    "upstream_retry_limit_exceeded": "...",
    "stream_idle_timeout": "...",
    "invalid_envoy_request_headers": "...",
    "downstream_protocol_error": "...",
    "upstream_max_stream_duration_reached": "...",
    "response_from_cache_filter": "...",
    "no_filter_config_found": "...",
    "duration_timeout": "...",
    "upstream_protocol_error": "...",
    "no_cluster_found": "..."
  }

.. _envoy_v3_api_field_data.accesslog.v3.ResponseFlags.failed_local_healthcheck:

failed_local_healthcheck
  (`bool <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Indicates local server healthcheck failed.
  
  
.. _envoy_v3_api_field_data.accesslog.v3.ResponseFlags.no_healthy_upstream:

no_healthy_upstream
  (`bool <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Indicates there was no healthy upstream.
  
  
.. _envoy_v3_api_field_data.accesslog.v3.ResponseFlags.upstream_request_timeout:

upstream_request_timeout
  (`bool <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Indicates an there was an upstream request timeout.
  
  
.. _envoy_v3_api_field_data.accesslog.v3.ResponseFlags.local_reset:

local_reset
  (`bool <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Indicates local codec level reset was sent on the stream.
  
  
.. _envoy_v3_api_field_data.accesslog.v3.ResponseFlags.upstream_remote_reset:

upstream_remote_reset
  (`bool <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Indicates remote codec level reset was received on the stream.
  
  
.. _envoy_v3_api_field_data.accesslog.v3.ResponseFlags.upstream_connection_failure:

upstream_connection_failure
  (`bool <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Indicates there was a local reset by a connection pool due to an initial connection failure.
  
  
.. _envoy_v3_api_field_data.accesslog.v3.ResponseFlags.upstream_connection_termination:

upstream_connection_termination
  (`bool <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Indicates the stream was reset due to an upstream connection termination.
  
  
.. _envoy_v3_api_field_data.accesslog.v3.ResponseFlags.upstream_overflow:

upstream_overflow
  (`bool <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Indicates the stream was reset because of a resource overflow.
  
  
.. _envoy_v3_api_field_data.accesslog.v3.ResponseFlags.no_route_found:

no_route_found
  (`bool <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Indicates no route was found for the request.
  
  
.. _envoy_v3_api_field_data.accesslog.v3.ResponseFlags.delay_injected:

delay_injected
  (`bool <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Indicates that the request was delayed before proxying.
  
  
.. _envoy_v3_api_field_data.accesslog.v3.ResponseFlags.fault_injected:

fault_injected
  (`bool <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Indicates that the request was aborted with an injected error code.
  
  
.. _envoy_v3_api_field_data.accesslog.v3.ResponseFlags.rate_limited:

rate_limited
  (`bool <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Indicates that the request was rate-limited locally.
  
  
.. _envoy_v3_api_field_data.accesslog.v3.ResponseFlags.unauthorized_details:

unauthorized_details
  (:ref:`data.accesslog.v3.ResponseFlags.Unauthorized <envoy_v3_api_msg_data.accesslog.v3.ResponseFlags.Unauthorized>`) Indicates if the request was deemed unauthorized and the reason for it.
  
  
.. _envoy_v3_api_field_data.accesslog.v3.ResponseFlags.rate_limit_service_error:

rate_limit_service_error
  (`bool <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Indicates that the request was rejected because there was an error in rate limit service.
  
  
.. _envoy_v3_api_field_data.accesslog.v3.ResponseFlags.downstream_connection_termination:

downstream_connection_termination
  (`bool <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Indicates the stream was reset due to a downstream connection termination.
  
  
.. _envoy_v3_api_field_data.accesslog.v3.ResponseFlags.upstream_retry_limit_exceeded:

upstream_retry_limit_exceeded
  (`bool <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Indicates that the upstream retry limit was exceeded, resulting in a downstream error.
  
  
.. _envoy_v3_api_field_data.accesslog.v3.ResponseFlags.stream_idle_timeout:

stream_idle_timeout
  (`bool <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Indicates that the stream idle timeout was hit, resulting in a downstream 408.
  
  
.. _envoy_v3_api_field_data.accesslog.v3.ResponseFlags.invalid_envoy_request_headers:

invalid_envoy_request_headers
  (`bool <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Indicates that the request was rejected because an envoy request header failed strict
  validation.
  
  
.. _envoy_v3_api_field_data.accesslog.v3.ResponseFlags.downstream_protocol_error:

downstream_protocol_error
  (`bool <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Indicates there was an HTTP protocol error on the downstream request.
  
  
.. _envoy_v3_api_field_data.accesslog.v3.ResponseFlags.upstream_max_stream_duration_reached:

upstream_max_stream_duration_reached
  (`bool <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Indicates there was a max stream duration reached on the upstream request.
  
  
.. _envoy_v3_api_field_data.accesslog.v3.ResponseFlags.response_from_cache_filter:

response_from_cache_filter
  (`bool <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Indicates the response was served from a cache filter.
  
  
.. _envoy_v3_api_field_data.accesslog.v3.ResponseFlags.no_filter_config_found:

no_filter_config_found
  (`bool <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Indicates that a filter configuration is not available.
  
  
.. _envoy_v3_api_field_data.accesslog.v3.ResponseFlags.duration_timeout:

duration_timeout
  (`bool <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Indicates that request or connection exceeded the downstream connection duration.
  
  
.. _envoy_v3_api_field_data.accesslog.v3.ResponseFlags.upstream_protocol_error:

upstream_protocol_error
  (`bool <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Indicates there was an HTTP protocol error in the upstream response.
  
  
.. _envoy_v3_api_field_data.accesslog.v3.ResponseFlags.no_cluster_found:

no_cluster_found
  (`bool <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Indicates no cluster was found for the request.
  
  
.. _envoy_v3_api_msg_data.accesslog.v3.ResponseFlags.Unauthorized:

data.accesslog.v3.ResponseFlags.Unauthorized
--------------------------------------------

`[data.accesslog.v3.ResponseFlags.Unauthorized proto] <https://github.com/envoyproxy/envoy/blob/v1.18.2/api/envoy/data/accesslog/v3/accesslog.proto#L193>`_


.. code-block:: json

  {
    "reason": "..."
  }

.. _envoy_v3_api_field_data.accesslog.v3.ResponseFlags.Unauthorized.reason:

reason
  (:ref:`data.accesslog.v3.ResponseFlags.Unauthorized.Reason <envoy_v3_api_enum_data.accesslog.v3.ResponseFlags.Unauthorized.Reason>`) 
  

.. _envoy_v3_api_enum_data.accesslog.v3.ResponseFlags.Unauthorized.Reason:

Enum data.accesslog.v3.ResponseFlags.Unauthorized.Reason
--------------------------------------------------------

`[data.accesslog.v3.ResponseFlags.Unauthorized.Reason proto] <https://github.com/envoyproxy/envoy/blob/v1.18.2/api/envoy/data/accesslog/v3/accesslog.proto#L198>`_

Reasons why the request was unauthorized

.. _envoy_v3_api_enum_value_data.accesslog.v3.ResponseFlags.Unauthorized.Reason.REASON_UNSPECIFIED:

REASON_UNSPECIFIED
  *(DEFAULT)* ⁣
  
.. _envoy_v3_api_enum_value_data.accesslog.v3.ResponseFlags.Unauthorized.Reason.EXTERNAL_SERVICE:

EXTERNAL_SERVICE
  ⁣The request was denied by the external authorization service.
  
  


.. _envoy_v3_api_msg_data.accesslog.v3.TLSProperties:

data.accesslog.v3.TLSProperties
-------------------------------

`[data.accesslog.v3.TLSProperties proto] <https://github.com/envoyproxy/envoy/blob/v1.18.2/api/envoy/data/accesslog/v3/accesslog.proto#L287>`_

Properties of a negotiated TLS connection.

.. code-block:: json

  {
    "tls_version": "...",
    "tls_cipher_suite": "{...}",
    "tls_sni_hostname": "...",
    "local_certificate_properties": "{...}",
    "peer_certificate_properties": "{...}",
    "tls_session_id": "..."
  }

.. _envoy_v3_api_field_data.accesslog.v3.TLSProperties.tls_version:

tls_version
  (:ref:`data.accesslog.v3.TLSProperties.TLSVersion <envoy_v3_api_enum_data.accesslog.v3.TLSProperties.TLSVersion>`) Version of TLS that was negotiated.
  
  
.. _envoy_v3_api_field_data.accesslog.v3.TLSProperties.tls_cipher_suite:

tls_cipher_suite
  (`UInt32Value <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#uint32value>`_) TLS cipher suite negotiated during handshake. The value is a
  four-digit hex code defined by the IANA TLS Cipher Suite Registry
  (e.g. ``009C`` for ``TLS_RSA_WITH_AES_128_GCM_SHA256``).
  
  Here it is expressed as an integer.
  
  
.. _envoy_v3_api_field_data.accesslog.v3.TLSProperties.tls_sni_hostname:

tls_sni_hostname
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) SNI hostname from handshake.
  
  
.. _envoy_v3_api_field_data.accesslog.v3.TLSProperties.local_certificate_properties:

local_certificate_properties
  (:ref:`data.accesslog.v3.TLSProperties.CertificateProperties <envoy_v3_api_msg_data.accesslog.v3.TLSProperties.CertificateProperties>`) Properties of the local certificate used to negotiate TLS.
  
  
.. _envoy_v3_api_field_data.accesslog.v3.TLSProperties.peer_certificate_properties:

peer_certificate_properties
  (:ref:`data.accesslog.v3.TLSProperties.CertificateProperties <envoy_v3_api_msg_data.accesslog.v3.TLSProperties.CertificateProperties>`) Properties of the peer certificate used to negotiate TLS.
  
  
.. _envoy_v3_api_field_data.accesslog.v3.TLSProperties.tls_session_id:

tls_session_id
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) The TLS session ID.
  
  
.. _envoy_v3_api_msg_data.accesslog.v3.TLSProperties.CertificateProperties:

data.accesslog.v3.TLSProperties.CertificateProperties
-----------------------------------------------------

`[data.accesslog.v3.TLSProperties.CertificateProperties proto] <https://github.com/envoyproxy/envoy/blob/v1.18.2/api/envoy/data/accesslog/v3/accesslog.proto#L299>`_


.. code-block:: json

  {
    "subject_alt_name": [],
    "subject": "..."
  }

.. _envoy_v3_api_field_data.accesslog.v3.TLSProperties.CertificateProperties.subject_alt_name:

subject_alt_name
  (**repeated** :ref:`data.accesslog.v3.TLSProperties.CertificateProperties.SubjectAltName <envoy_v3_api_msg_data.accesslog.v3.TLSProperties.CertificateProperties.SubjectAltName>`) SANs present in the certificate.
  
  
.. _envoy_v3_api_field_data.accesslog.v3.TLSProperties.CertificateProperties.subject:

subject
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) The subject field of the certificate.
  
  
.. _envoy_v3_api_msg_data.accesslog.v3.TLSProperties.CertificateProperties.SubjectAltName:

data.accesslog.v3.TLSProperties.CertificateProperties.SubjectAltName
--------------------------------------------------------------------

`[data.accesslog.v3.TLSProperties.CertificateProperties.SubjectAltName proto] <https://github.com/envoyproxy/envoy/blob/v1.18.2/api/envoy/data/accesslog/v3/accesslog.proto#L303>`_


.. code-block:: json

  {
    "uri": "..."
  }

.. _envoy_v3_api_field_data.accesslog.v3.TLSProperties.CertificateProperties.SubjectAltName.uri:

uri
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) 
  
  




.. _envoy_v3_api_enum_data.accesslog.v3.TLSProperties.TLSVersion:

Enum data.accesslog.v3.TLSProperties.TLSVersion
-----------------------------------------------

`[data.accesslog.v3.TLSProperties.TLSVersion proto] <https://github.com/envoyproxy/envoy/blob/v1.18.2/api/envoy/data/accesslog/v3/accesslog.proto#L291>`_


.. _envoy_v3_api_enum_value_data.accesslog.v3.TLSProperties.TLSVersion.VERSION_UNSPECIFIED:

VERSION_UNSPECIFIED
  *(DEFAULT)* ⁣
  
.. _envoy_v3_api_enum_value_data.accesslog.v3.TLSProperties.TLSVersion.TLSv1:

TLSv1
  ⁣
  
.. _envoy_v3_api_enum_value_data.accesslog.v3.TLSProperties.TLSVersion.TLSv1_1:

TLSv1_1
  ⁣
  
.. _envoy_v3_api_enum_value_data.accesslog.v3.TLSProperties.TLSVersion.TLSv1_2:

TLSv1_2
  ⁣
  
.. _envoy_v3_api_enum_value_data.accesslog.v3.TLSProperties.TLSVersion.TLSv1_3:

TLSv1_3
  ⁣
  

.. _envoy_v3_api_msg_data.accesslog.v3.HTTPRequestProperties:

data.accesslog.v3.HTTPRequestProperties
---------------------------------------

`[data.accesslog.v3.HTTPRequestProperties proto] <https://github.com/envoyproxy/envoy/blob/v1.18.2/api/envoy/data/accesslog/v3/accesslog.proto#L346>`_


.. code-block:: json

  {
    "request_method": "...",
    "scheme": "...",
    "authority": "...",
    "port": "{...}",
    "path": "...",
    "user_agent": "...",
    "referer": "...",
    "forwarded_for": "...",
    "request_id": "...",
    "original_path": "...",
    "request_headers_bytes": "...",
    "request_body_bytes": "...",
    "request_headers": "{...}"
  }

.. _envoy_v3_api_field_data.accesslog.v3.HTTPRequestProperties.request_method:

request_method
  (:ref:`config.core.v3.RequestMethod <envoy_v3_api_enum_config.core.v3.RequestMethod>`) The request method (RFC 7231/2616).
  
  
.. _envoy_v3_api_field_data.accesslog.v3.HTTPRequestProperties.scheme:

scheme
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) The scheme portion of the incoming request URI.
  
  
.. _envoy_v3_api_field_data.accesslog.v3.HTTPRequestProperties.authority:

authority
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) HTTP/2 ``:authority`` or HTTP/1.1 ``Host`` header value.
  
  
.. _envoy_v3_api_field_data.accesslog.v3.HTTPRequestProperties.port:

port
  (`UInt32Value <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#uint32value>`_) The port of the incoming request URI
  (unused currently, as port is composed onto authority).
  
  
.. _envoy_v3_api_field_data.accesslog.v3.HTTPRequestProperties.path:

path
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) The path portion from the incoming request URI.
  
  
.. _envoy_v3_api_field_data.accesslog.v3.HTTPRequestProperties.user_agent:

user_agent
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Value of the ``User-Agent`` request header.
  
  
.. _envoy_v3_api_field_data.accesslog.v3.HTTPRequestProperties.referer:

referer
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Value of the ``Referer`` request header.
  
  
.. _envoy_v3_api_field_data.accesslog.v3.HTTPRequestProperties.forwarded_for:

forwarded_for
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Value of the ``X-Forwarded-For`` request header.
  
  
.. _envoy_v3_api_field_data.accesslog.v3.HTTPRequestProperties.request_id:

request_id
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Value of the ``X-Request-Id`` request header
  
  This header is used by Envoy to uniquely identify a request.
  It will be generated for all external requests and internal requests that
  do not already have a request ID.
  
  
.. _envoy_v3_api_field_data.accesslog.v3.HTTPRequestProperties.original_path:

original_path
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Value of the ``X-Envoy-Original-Path`` request header.
  
  
.. _envoy_v3_api_field_data.accesslog.v3.HTTPRequestProperties.request_headers_bytes:

request_headers_bytes
  (`uint64 <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Size of the HTTP request headers in bytes.
  
  This value is captured from the OSI layer 7 perspective, i.e. it does not
  include overhead from framing or encoding at other networking layers.
  
  
.. _envoy_v3_api_field_data.accesslog.v3.HTTPRequestProperties.request_body_bytes:

request_body_bytes
  (`uint64 <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Size of the HTTP request body in bytes.
  
  This value is captured from the OSI layer 7 perspective, i.e. it does not
  include overhead from framing or encoding at other networking layers.
  
  
.. _envoy_v3_api_field_data.accesslog.v3.HTTPRequestProperties.request_headers:

request_headers
  (**repeated** map<`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_, `string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_>) Map of additional headers that have been configured to be logged.
  
  


.. _envoy_v3_api_msg_data.accesslog.v3.HTTPResponseProperties:

data.accesslog.v3.HTTPResponseProperties
----------------------------------------

`[data.accesslog.v3.HTTPResponseProperties proto] <https://github.com/envoyproxy/envoy/blob/v1.18.2/api/envoy/data/accesslog/v3/accesslog.proto#L402>`_


.. code-block:: json

  {
    "response_code": "{...}",
    "response_headers_bytes": "...",
    "response_body_bytes": "...",
    "response_headers": "{...}",
    "response_trailers": "{...}",
    "response_code_details": "..."
  }

.. _envoy_v3_api_field_data.accesslog.v3.HTTPResponseProperties.response_code:

response_code
  (`UInt32Value <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#uint32value>`_) The HTTP response code returned by Envoy.
  
  
.. _envoy_v3_api_field_data.accesslog.v3.HTTPResponseProperties.response_headers_bytes:

response_headers_bytes
  (`uint64 <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Size of the HTTP response headers in bytes.
  
  This value is captured from the OSI layer 7 perspective, i.e. it does not
  include overhead from framing or encoding at other networking layers.
  
  
.. _envoy_v3_api_field_data.accesslog.v3.HTTPResponseProperties.response_body_bytes:

response_body_bytes
  (`uint64 <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Size of the HTTP response body in bytes.
  
  This value is captured from the OSI layer 7 perspective, i.e. it does not
  include overhead from framing or encoding at other networking layers.
  
  
.. _envoy_v3_api_field_data.accesslog.v3.HTTPResponseProperties.response_headers:

response_headers
  (**repeated** map<`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_, `string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_>) Map of additional headers configured to be logged.
  
  
.. _envoy_v3_api_field_data.accesslog.v3.HTTPResponseProperties.response_trailers:

response_trailers
  (**repeated** map<`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_, `string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_>) Map of trailers configured to be logged.
  
  
.. _envoy_v3_api_field_data.accesslog.v3.HTTPResponseProperties.response_code_details:

response_code_details
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) The HTTP response code details.
  
  


